--- a/backend/package.json
+++ b/backend/package.json
@@ -5,12 +5,21 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/app",
-    "dev": "tsx watch src/app.ts"
+    "dev": "tsx watch src/app.ts",
+    "typeorm": "tsx ./node_modules/typeorm/cli.js -d ./src/config/data-source.ts"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.25"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.1",
     "tsx": "^4.20.4",
