admin migration seed + login

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,11 @@
     "build": "tsc",
     "start": "node dist/app",
     "dev": "tsx watch src/app.ts",
-    "typeorm": "tsx ./node_modules/typeorm/cli.js -d ./src/config/data-source.ts"
+    "typeorm": "tsx ./node_modules/typeorm/cli.js",
+    "migration:run": "npm run typeorm -- -d ./src/config/data-source.ts migration:run",
+    "migration:revert": "npm run typeorm -- -d ./src/config/data-source.ts migration:revert",
+    "migration:generate": "npm run typeorm -- -d ./src/config/data-source.ts migration:generate",
+    "migration:create": "npm run typeorm -- migration:create"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -14,6 +18,7 @@
     "class-validator": "^0.14.2",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.25"
@@ -21,6 +26,7 @@
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.1",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2"
