--- a/backend/.env
+++ b/backend/.env
@@ -5,6 +5,13 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=lewipinja
 DB_DATABASE=task_management
+# JWT
+JWT_SECRET=gGp292H8U42rKcltj6zT6VAgxcLpz5SZteYOM5EYSR25znXJ-Hnzs4K0b6EDfjPf0SPexIbpsLFuO5-ZNg9GmA==
+JWT_EXPIRES_IN=6h
+# admin credentials
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=admin123
+ADMIN_USERNAME=admin
 # app port
 PORT=3000
 
