--- a/backend/.env
+++ b/backend/.env
@@ -12,6 +12,8 @@ JWT_EXPIRES_IN=6h
 ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=admin123
 ADMIN_USERNAME=admin
+# frontend
+FRONTEND_URL=http://localhost:5173
 # app port
 PORT=3000
 
