--- a/mobile/app.json
+++ b/mobile/app.json
@@ -37,6 +37,9 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "apiBaseUrl": "http://192.168.100.254:3000/api"
     }
   }
 }
